--- a/smarth/components/header.html
+++ b/smarth/components/header.html
@@ -1,5 +1,7 @@
+<link rel="stylesheet" href="./static/style/header.css">
+
 <nav class="header navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
                 <span class="sr-only">切换导航</span>
@@ -7,14 +9,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand nav_a" href="javascript:;">首页</a>
+            <a class="navbar-brand nav_a logo" href="javascript:;"><span>Lo</span>go</a>
         </div>
         <div class="collapse navbar-collapse" id="example-navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a class="nav_a" href="javascript:;">导航一</a></li>
-                <li><a class="nav_a" href="javascript:;">导航二</a></li>
-                <li><a class="nav_a" href="javascript:;">导航三</a></li>
-                <li><a class="nav_a" href="javascript:;">导航四</a></li>
+                <li class="_active"><a class="nav_a" href="javascript:;">Home</a></li>
+                <li><a class="nav_a" href="javascript:;">Nav1</a></li>
+                <li><a class="nav_a" href="javascript:;">Nav2</a></li>
+                <li><a class="nav_a" href="javascript:;">Nav3</a></li>
+                <li><a class="nav_a" href="javascript:;">Nav4</a></li>
+                <li><a class="nav_a" href="javascript:;">Nav5</a></li>
+                <li><a class="nav_a" href="javascript:;">Nav6</a></li>
             </ul>
         </div>
     </div>
