--- a/smarth/static/style/footer.css
+++ b/smarth/static/style/footer.css
@@ -1,6 +1,7 @@
 .footer{
     height: 100px;
-    background: #999;
+    background: #fff;
+    border-top: 1px solid #edf0f2
 }
 
 .updown {
@@ -8,8 +9,8 @@
     cursor: pointer;
     color: #fff;
     text-align: center;
-    right: 10px;
-    bottom: 10px;
+    right: 15px;
+    bottom: 15px;
     display: inline-block;
     z-index: 9;
     width: 40px;
