--- a/smarth/components/footer.html
+++ b/smarth/components/footer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./static/style/footer.css">
+<link rel="stylesheet" href="../../static/style/footer.css">
 <div class="footer">
     底部信息
 
