--- a/smarth/components/header.html
+++ b/smarth/components/header.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./static/style/header.css">
+<link rel="stylesheet" href="../../static/style/header.css">
 
 <nav class="header navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
