--- a/smarth/static/style/reset.css
+++ b/smarth/static/style/reset.css
@@ -1,50 +1,84 @@
-body {
-    font-family:arial,helvetica,sans-serif;
-    font-size:13px;
-    font-size-adjust:none;
-    font-stretch:normal;
-    font-style:normal;
-    font-variant:normal;
-    font-weight:normal;
-    line-height:1.4;
+body,html{
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    /*这样会使1rem=10px;或者子元素的1em=10px*/
+    /* font-size: 62.5%; */
 }
-body, div,ul, ol, dl, dd, h1, h2, h3, h4, h5, h6, p, form, fieldset, legend, input, textarea, select, button, th, td {
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,a,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
     margin:0;
     padding:0;
+    /* border:0; */
+    outline: 0;
+    box-sizing: border-box;
+    position: relative;
+}
+input,button,textarea,select{
+    outline: 0;
     box-sizing: border-box;
 }
-h1, h2, h3, h4, h5, h6 {
-    font-size:100%;
-    font-weight:normal;
+h1,h2,h3,h4,h5,h6,em,i {
+    font-weight: 100;
+    font-style: normal;
 }
-table {
-    font-size:inherit;
+ul,ol,li {
+    list-style-type: none;
 }
-input, select {
-    font-family:arial,helvetica,clean,sans-serif;
-    font-size:100%;
-    font-size-adjust:none;
-    font-stretch:normal;
-    font-style:normal;
-    font-variant:normal;
-    font-weight:normal;
-    line-height:normal;
+a {
+    text-decoration: none;
+    color: #fff;
 }
-button {
-    overflow:visible;
+
+/* 常用公共样式 */
+.flex_start{
+    display: flex;
+    align-items: center;
+    justify-content:start;
 }
-th, em, strong, b, address, cite {
-    font-style:normal;
-    font-weight:normal;
+.flex_around{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
-li {
-    list-style-image:none;
-    list-style-position:outside;
-    list-style-type:none;
+.flex_between{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-img, fieldset {
-    border:0 none;
+.top50{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
-ins {
-    text-decoration:none;
+.left50{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
+.topleft50{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+/*清除浮动*/
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+.clearfix {display: inline-block;}
